# 3D-Rendering

./: CMakeLists.txt  Makefile  README.md  backward_ray_marching.cpp  bbox.cpp  bbox.h  data_loader.cpp  data_loader.h  forward_ray_marching.cpp  fragment_shader.glsl  geometry.cpp  geometry.h  kdtree.cpp  kdtree.h  laurel.bat  laurel.cpp  main.bat  main.cpp  main.py  material.cpp  material.h  opengl_main.cpp  optics.cpp  optics.h  path_tracing.cpp  primitive_tree.cpp  primitive_tree.h  ray_marching.bat  rendering.cpp  sphere.bat  sphere.cpp  vec3.h  vertex_shader.glsl  volume.bat  volume_rendering.cpp  whitted_ray_tracing.bat  whitted_ray_tracing.cpp
results/: backward_ray_marching.ppm  forward_ray_marching.ppm  laurel.ppm  multiple_light_sources_output.ppm  output.ppm  single_light_source_output.ppm  sphere.ppm  volume_rendering.ppm  whitted_ray_tracing.ppm
utils/: Makefile  bbox.cpp  bbox.h  geometry.cpp  geometry.h  kdtree.cpp  kdtree.h  material.cpp  material.h  mesh.cpp  mesh.h  optics.cpp  optics.h  primitive_tree.cpp  primitive_tree.h  utils.cpp  utils.h  vec3.cpp
